Added fetch functions to players/filters slices; removed actions and reducers

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SoccerStars</title>
+    <meta
+      name="description"
+      content="Manage and explore football players by continent with ease. Add, delete, and filter players using our user-friendly interface powered by Redux Toolkit. Experience an amazing design and seamless performance."
+    />
+    <meta
+      name="keywords"
+      content="football players, add players, delete players, filter players, continents, football, soccer, player management"
+    />
+    <meta name="author" content="Komiljon" />
   </head>
   <body>
     <div id="root"></div>
